--- a/index.html
+++ b/index.html
@@ -50,5 +50,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa debitis error. Dicta reprehenderit et maxime id voluptas saepe officiis commodi provident possimus officia facere sit corporis, nesciunt voluptate ipsam?</p>
 
 </div>
+<footer>
+    <h3>2025 daniela condori bejarano</h3>
+</footer>
+<main>
+    <h1>lo del medio</h1>
+</main>
 </body>
 </html>
